Bug 1055843 - Do not pause when playbackRate = 0. Instead don't play anything. r=padenot